# autoTrade

./: .gitignore  README.md  __init__.py  bot.py  historical_data.csv  pyproject.toml  requirements.txt
core/: __init__.py  protocols.py
core/analysis/: metrics.py
core/config/: configs.py  settings.py
core/execution/: exchange.py  live_trader.py
core/utilities/: data_quality.py
ml/: feature_engineering.py  signal_refinement.py
ml/models/: model_training.py
portfolio_management/: __init__.py  allocator.py  optimizer.py
risk_management/: __init__.py  position_sizing.py  stop_loss.py  trailing_stop.py
src/: bot.py  config.py  exchange.py
src/backtesting/: backtester.py  metrics.py  optimization.py  run_backtest.py  visualization.py
src/live_trading/: live_trader.py
src/ml_models/: feature_engineering.py  model_training.py
src/paper_trading/: paper_trader.py
src/strategies/: atr_filter.py  bollinger_band_strategy.py  combined_signal.py  rsi_strategy.py  sma_crossover.py  stochastic_oscillator.py  strategy_factory.py
src/strategies/core/trend/: bollinger_band.py
src/utils/: notifications.py
strategies/: __init__.py  base_strategy.py  strategy_factory.py
strategies/composite/: combined_signal.py
strategies/trend/: bollinger_band.py  macd.py  moving_average_crossover.py
strategies/volatility/: __init__.py  atr_filter.py
tests/: test_backtester.py  test_strategies.py  test_telegram.py
